url: http://127.0.0.1:8000/index.html?maestro=1
tags:
  - web
  - charts
  - sequence
---
- clearState
- openLink: http://127.0.0.1:8000/index.html?maestro=1
- assertVisible: "Sample sequence diagram"
- tapOn:
    id: "new-chart-button"
- assertVisible: "New chart"
- assertVisible:
    id: "new-sequence-diagram-button"
- tapOn: "Sequence diagram"
- assertVisible: "Chart Name"
- tapOn:
    id: "sequence-diagram-name-input"
- inputText: "Maestro Sequence Flow"
- tapOn: "Create"
- assertNotVisible: "New Sequence Diagram"
- assertVisible: "Maestro Sequence Flow"
- tapOn:
    id: "show-charts-button"
- assertVisible: "Maestro Sequence Flow"