url: http://127.0.0.1:8000/intro.html?maestro=1
tags:
  - web
  - intro
  - alignment
---
- clearState
- openLink: http://127.0.0.1:8000/intro.html?maestro=1
- assertVisible: "ChartMage"
- assertVisible: "Open editor"
- tapOn: "Open editor"
- assertVisible: "Sample sequence diagram"
- assertVisible:
    id: "show-charts-button"
- assertVisible:
    id: "new-chart-button"
